--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "foundation": "~5.4.7",
     "angular": "~1.3.4",
     "lodash": "~2.4.1",
-    "angular-spotify": "~0.11.0"
+    "angular-spotify": "~0.11.0",
+    "color-thief": "*"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
