--- a/bower.json
+++ b/bower.json
@@ -10,11 +10,11 @@
     "angular-sanitize": "~1.3.4",
     "angular-resource": "~1.3.4",
     "angular-route": "~1.3.4",
-    "foundation": "~5.4.7",
     "angular": "~1.3.4",
     "lodash": "~2.4.1",
     "angular-spotify": "~0.11.0",
-    "color-thief": "*"
+    "color-thief": "*",
+    "angular-material": "~0.7.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
