--- a/bower.json
+++ b/bower.json
@@ -2,21 +2,18 @@
   "name": "colorRelease",
   "version": "0.0.0",
   "dependencies": {
-    "modernizr": "~2.8.3",
-    "jquery": "~2.1.1",
     "angular-animate": "~1.3.4",
     "angular-route": "~1.3.4",
     "angular": "~1.3.4",
     "lodash": "~2.4.1",
-    "angular-spotify": "~0.11.0",
     "color-thief": "*",
-    "angular-material": "~0.7.0"
+    "angular-material": "~0.7.0",
+    "zepto": "~1.1.6"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
   },
   "resolutions": {
-    "jquery": "~2.1.1",
     "angular": "~1.3.4"
   }
 }
